Fixed picture size

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <a href="https://en.wikipedia.org/wiki/Doug_the_Pug" target="">
-  <img src="https://imgur.com/2e2L0Z5.jpg" alt="This is Doug">
+  <img width="500px" src="https://imgur.com/2e2L0Z5.jpg" alt="This is Doug">
 </a>
 <h1>Doug The Pug!</h1>
 <h2>Biography:</h2>
